# HLF-Hieroglyphic-Logic-Framework-MCP

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.jsonc  .readiness_changed.txt  .readiness_report.json  .tmp_orchestration_pytest.txt  AGENTS.md  BUILD_GUIDE.md  CHANGELOG.md  Dockerfile  HLF_ACTIONABLE_PLAN.md  HLF_ANALYST_CORRECTION_2026-03-26.md  HLF_CANONICALIZATION_MATRIX.md  HLF_ETHICAL_GOVERNOR.md  HLF_ETHICAL_GOVERNOR_ARCHITECTURE.md  HLF_EXHAUSTIVE_ANALYSIS.md  HLF_EXHAUSTIVE_GAPS_ANALYSIS.md  HLF_IMPLEMENTATION_COMPLETE.md  HLF_IMPLEMENTATION_INDEX.md  HLF_IMPLEMENTATION_SUMMARY.md  HLF_INTEGRATION_SUMMARY.md  HLF_MCP_TODO.md  HLF_QUALITY_TARGETS.md  HLF_README.md  HLF_REPO_GROUND_TRUTH.md  HLF_SOURCE_EXTRACTION_LEDGER.md  HLF_SUMMARY.txt  HLF_SUPPORTIVE_SOURCE_CONTEXT_MAP.md  HLF_VISION_DOCTRINE.md  IMPLEMENTATION_INDEX.md  QUICKSTART.md  README.md  RECOVERED_HLF_VISION_AND_MERGE_BRIEF_2026-03-15.md  RECOVERED_MCP_COMPARISON_2026-03-15.md  SSOT_HLF_MCP.md  TODO.md  _math_out.json  check_mcp_tools.py  debug_tool.py  (+15 more)
.github/: dependabot.yml
docs/: AGENTS_CATALOG.md  BUILD_GUIDE.md  ETHICAL_GOVERNOR_HANDOFF.md  HLF_AGENT_FLOW.md  HLF_AGENT_ONBOARDING.md  HLF_AGENT_OPERATING_PROTOCOL.md  HLF_ASSEMBLY_REFIT_MATRIX.md  HLF_AUDIT_SYSTEM.md  HLF_BRANCH_AWARE_CLAIMS_LEDGER_2026-03-20.md  HLF_BRANCH_BOUNDED_MAINTAINER_PROTOCOL.md  HLF_CHINESE_COGNITIVE_LANE_LAUNCH_CRITERIA.md  HLF_CLAIM_LANES.md  HLF_DESIGN_NORTH_STAR.md  HLF_DOCTRINE_TEST_COVERAGE_MATRIX.md  HLF_DREAM_CYCLE_BRIDGE_SPEC.md  HLF_DREAM_CYCLE_GAP_MAP.md  HLF_EMBEDDING_AGENT_DECISION_MATRIX.md  HLF_EXTERNAL_TECHNIQUE_SOURCE_AUDIT_2026-03-23.md  HLF_FORMAL_VERIFICATION_RECOVERY_SPEC.md  HLF_GALLERY_AND_OPERATOR_SURFACES_SPEC.md  HLF_GOVERNANCE_CONTROL_MATRIX.md  HLF_GRAMMAR_REFERENCE.md  HLF_GUI_BUILD_GUIDE_DRAFT.md  HLF_HKS_EXTRACTION_STATUS_MATRIX.md  HLF_HKS_SOURCE_GAP_PASS_2026-03-23.md  HLF_HOST_FUNCTIONS_REFERENCE.md  HLF_INGESTION_MANIFEST.md  HLF_INTERNAL_PERSONA_OPERATING_MODEL.md  HLF_INTERNAL_READINESS_DASHBOARD_2026-03-20.md  HLF_KNOWLEDGE_SUBSTRATE_RESEARCH_HANDOFF.md  HLF_LANGUAGE_EVOLUTION_AND_BYTECODE_TRUST_SPEC.md  HLF_LANGUAGE_PROMOTION_BENCHMARK_SPEC.md  HLF_LOCAL_CORPORA_EXTRACTION.md  HLF_MCP_AGENT_HANDOFF.md  (+48 more)
hlf/: __init__.py  (+21 more)
(+389 files in other folders)
