[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hlf-mcp"
version = "0.5.0"
description = "HLF (Hieroglyphic Logic Framework) MCP Server — deterministic orchestration protocol for agentic systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "lark>=1.3.1",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "anyio>=4.9.0",
    "pydantic>=2.11.0",
    "tiktoken>=0.12.0",
    "httpx>=0.28.0",
    "starlette>=0.46.0",
    "cryptography>=41.0.0",
    "pygls>=2.0.0",
    "lsprotocol>=2024.0.0",
]

[project.optional-dependencies]
# Hot cache tier — Valkey/Redis-compatible client (BSL-free Valkey official driver)
# Install:  uv sync --extra hot   |   pip install "hlf-mcp[hot]"
hot  = ["valkey>=6.0.0"]
# Full tier — hot + beartype for strict host-function type enforcement at runtime
# Install:  uv sync --extra full  |   pip install "hlf-mcp[full]"
full = ["valkey>=6.0.0", "beartype>=0.18.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[project.scripts]
hlf-mcp  = "hlf_mcp.server:main"
hlfc     = "hlf_mcp.hlf.compiler:main"
hlffmt   = "hlf_mcp.hlf.formatter:main"
hlflint  = "hlf_mcp.hlf.linter:main"
hlfpm    = "hlf_mcp.hlf.hlfpm:main"
hlfrun   = "hlf_mcp.hlf.runtime:main"
hlfsh    = "hlf_mcp.hlf.hlfsh:main"
hlflsp   = "hlf_mcp.hlf.hlflsp:main"
hlftest  = "hlf_mcp.hlf.hlftest:main"

[tool.hatch.build.targets.wheel]
packages = ["hlf_mcp", "governance"]

[tool.hatch.build.targets.wheel.shared-data]
"fixtures" = "hlf_mcp/fixtures"
"governance" = "hlf_mcp/governance"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Root-level smoke scripts like smoke_test_e2e.py and test_all_tools.py are
# intentionally manual and are not part of default pytest collection.
testpaths = [
    "tests",
    "test_mcp.py",
    "test_mcp_minimal.py",
    "test_mcp_complete.py",
    "test_mcp_quick.py",
    "test_mcp_modules.py",
    "test_metrics_win.py",
]
